fixed mobile dropdown bugs that resulted from font change on mobile as well as top margin on home page so 667px heights look good

--- a/src/css/mysavei.css
+++ b/src/css/mysavei.css
@@ -61,10 +61,10 @@ article.component-content.mobile-app .about-mobile-app {
     max-width: 240px;
   }
   article.component-content.mobile-app .about-mobile-app.dropdown-start.opened {
-    height: 340px;
+    height: 320px;
   }
   article.component-content.mobile-app .about-mobile-app.dropdown-start.opened .expand {
-    margin-top: -15px;
+    margin-top: -35px;
   }
   article.component-content.mobile-app .about-mobile-app.dropdown-start .mobile-app-descr.closed {
     display: none;
